--- a/index.html
+++ b/index.html
@@ -38,16 +38,19 @@
         </nav>
         <ul class="navigation mail-phone-link">
           <li>
-            <svg class="envelope">
-              <use href="./images/icons.svg#icon-envelope "></use>
-            </svg>
-            <a class="contact-mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="contact-mail" href="mailto:info@devstudio.com">
+              <svg class="envelope-icon">
+                <use href="./images/icons.svg#icon-envelope "></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contact-phone" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="contact-phone" href="tel:+380961111111">
+              <svg class="phone-icon">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -182,6 +185,48 @@
               <div class="team-card-bottom">
                 <h3 class="list-card-name">Ольга Рєпіна</h3>
                 <p class="team-card-job-title" lang="en">Frontend Developer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        aria-label="посилання на соц мережу інстаграм"
+                        class="social-list-icon"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        aria-label="посилання на соц мережу твіттер"
+                        class="social-list-icon"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        aria-label="посилання на соц мережу фейсбук"
+                        class="social-list-icon"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        aria-label="посилання на соц мережу лінкед-ін"
+                        class="social-list-icon"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-card">
@@ -193,6 +238,48 @@
               <div class="team-card-bottom">
                 <h3 class="list-card-name">Микола Тарасов</h3>
                 <p class="team-card-job-title" lang="en">Marketing</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        aria-label="посилання на соц мережу інстаграм"
+                        class="social-list-icon"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        aria-label="посилання на соц мережу твіттер"
+                        class="social-list-icon"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        aria-label="посилання на соц мережу фейсбук"
+                        class="social-list-icon"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        aria-label="посилання на соц мережу лінкед-ін"
+                        class="social-list-icon"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-card">
@@ -204,7 +291,99 @@
               <div class="team-card-bottom">
                 <h3 class="list-card-name">Михайло Єрмаков</h3>
                 <p class="team-card-job-title" lang="en">UI Designer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        aria-label="посилання на соц мережу інстаграм"
+                        class="social-list-icon"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        aria-label="посилання на соц мережу твіттер"
+                        class="social-list-icon"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        aria-label="посилання на соц мережу фейсбук"
+                        class="social-list-icon"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        aria-label="посилання на соц мережу лінкед-ін"
+                        class="social-list-icon"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="clients">
+        <div class="container">
+          <h3 class="clients-title">Постійні клієнти</h3>
+          <ul class="clients-list">
+            <li class="clients-list-item">
+              <a href="" class="cleints-list-link">
+                <svg class="clients-list-logo">
+                  <use href="./images/icons.svg#icon-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a href="" class="cleints-list-link">
+                <svg class="clients-list-logo">
+                  <use href="./images/icons.svg#icon-company-one"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a href="" class="cleints-list-link">
+                <svg class="clients-list-logo">
+                  <use href="./images/icons.svg#icon-company-two"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a href="" class="cleints-list-link">
+                <svg class="clients-list-logo">
+                  <use href="./images/icons.svg#icon-company-thre"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a href="" class="cleints-list-link">
+                <svg class="clients-list-logo">
+                  <use href="./images/icons.svg#icon-company-four"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a href="" class="cleints-list-link">
+                <svg class="clients-list-logo">
+                  <use href="./images/icons.svg#icon-company-five"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -212,30 +391,33 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container page-footer-container">
-        <a class="footer-logo" href="./index.html"
-          ><span class="footer-logo-web">Web</span>Studio</a
-        >
-        <address class="bottom-addres">
-          <p class="link-address">
-            <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </p>
-          <ul class="bottom-contacts">
-            <li class="bottom-contacts-item">
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="bottom-contacts-item">
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+      <div class="container footer-container">
+        <div class="page-footer-container">
+          <a class="footer-logo" href="./index.html"
+            ><span class="footer-logo-web">Web</span>Studio</a
+          >
+          <address class="bottom-addres">
+            <p class="link-address">
+              <a
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </p>
+            <ul class="bottom-contacts">
+              <li class="bottom-contacts-item">
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="bottom-contacts-item">
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
 
         <div class="footer-social">
+          <h4 class="footer-social-title">приєднуйтесь</h4>
           <ul class="footer-social-list">
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
