--- a/portfolio.html
+++ b/portfolio.html
@@ -39,13 +39,19 @@
         </nav>
         <ul class="navigation mail-phone-link">
           <li>
-            <a class="contact-mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="contact-mail" href="mailto:info@devstudio.com">
+              <svg class="envelope-icon">
+                <use href="./images/icons.svg#icon-envelope "></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contact-phone" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="contact-phone" href="tel:+380961111111">
+              <svg class="phone-icon">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -171,28 +177,64 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container page-footer-container">
-        <a class="footer-logo" href="./index.html"
-          ><span class="footer-logo-web">Web</span>Studio</a
-        >
-        <address>
-          <p class="link-address">
-            <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </p>
-          <ul class="bottom-contacts">
-            <li class="bottom-contacts-item">
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <div class="container footer-container">
+        <div class="page-footer-container">
+          <a class="footer-logo" href="./index.html"
+            ><span class="footer-logo-web">Web</span>Studio</a
+          >
+          <address class="bottom-addres">
+            <p class="link-address">
+              <a
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </p>
+            <ul class="bottom-contacts">
+              <li class="bottom-contacts-item">
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="bottom-contacts-item">
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="footer-social">
+          <h4 class="footer-social-title">приєднуйтесь</h4>
+          <ul class="footer-social-list">
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link">
+                <svg class="footer-social-list-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="bottom-contacts-item">
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link">
+                <svg class="footer-social-list-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link">
+                <svg class="footer-social-list-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link">
+                <svg class="footer-social-list-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
