--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
 
     <main>
       <section class="solution">
-        <div class="container solution-container">
-          <h1 class="solution-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="odrder-button solution-order-button" type="button">
-            Замовити послугу
-          </button>
+        <div class="thumb">
+          <div class="container solution-container">
+            <h1 class="solution-title">Ефективні рішення для вашого бізнесу</h1>
+            <button class="odrder-button solution-order-button" type="button">
+              Замовити послугу
+            </button>
+          </div>
         </div>
       </section>
 
@@ -72,6 +74,11 @@
           <h2 hidden>Особливості</h2>
           <ul class="specifics-list">
             <li class="specifics-list-card">
+              <div class="specifics-list-icon-bg">
+                <svg class="specifics-list-icon" weight="70" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="specifics-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p>
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -79,6 +86,11 @@
               </p>
             </li>
             <li class="specifics-list-card">
+              <div class="specifics-list-icon-bg">
+                <svg class="specifics-list-icon" weight="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="specifics-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p>
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -86,12 +98,22 @@
               </p>
             </li>
             <li class="specifics-list-card">
+              <div class="specifics-list-icon-bg">
+                <svg class="specifics-list-icon" weight="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="specifics-title">ПЛАНУВАННЯ</h3>
               <p>
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="specifics-list-card">
+              <div class="specifics-list-icon-bg">
+                <svg class="specifics-list-icon" weight="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="specifics-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p>
                 Значимість цих проблем настільки очевидна, що реалізація
