--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <ul class="specifics-list">
             <li class="specifics-list-card">
               <div class="specifics-list-icon-bg">
-                <svg class="specifics-list-icon" weight="70" height="70">
+                <svg class="specifics-list-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -87,7 +87,7 @@
             </li>
             <li class="specifics-list-card">
               <div class="specifics-list-icon-bg">
-                <svg class="specifics-list-icon" weight="70" height="70">
+                <svg class="specifics-list-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -99,7 +99,7 @@
             </li>
             <li class="specifics-list-card">
               <div class="specifics-list-icon-bg">
-                <svg class="specifics-list-icon" weight="70" height="70">
+                <svg class="specifics-list-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -110,7 +110,7 @@
             </li>
             <li class="specifics-list-card">
               <div class="specifics-list-icon-bg">
-                <svg class="specifics-list-icon" weight="70" height="70">
+                <svg class="specifics-list-icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
