правки карточек на стр. портфолио

--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
             </li>
           </ul>
         </nav>
-        <ul class="navigation mail-phone-link">
+        <ul class="mail-phone-list">
           <li>
-            <a class="contact-mail" href="mailto:info@devstudio.com">
-              <svg class="envelope-icon">
+            <a class="contact-nav" href="mailto:info@devstudio.com">
+              <svg class="nav-contact-icon" width="16px" height="12px">
                 <use href="./images/icons.svg#icon-envelope "></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contact-phone" href="tel:+380961111111">
-              <svg class="phone-icon">
+            <a class="contact-nav" href="tel:+380961111111">
+              <svg class="nav-contact-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -59,13 +59,11 @@
 
     <main>
       <section class="solution">
-        <div class="thumb">
-          <div class="container solution-container">
-            <h1 class="solution-title">Ефективні рішення для вашого бізнесу</h1>
-            <button class="odrder-button solution-order-button" type="button">
-              Замовити послугу
-            </button>
-          </div>
+        <div class="container solution-container">
+          <h1 class="solution-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="odrder-button solution-order-button" type="button">
+            Замовити послугу
+          </button>
         </div>
       </section>
 
@@ -439,7 +437,7 @@
         </div>
 
         <div class="footer-social">
-          <h4 class="footer-social-title">приєднуйтесь</h4>
+          <p class="footer-social-title">приєднуйтесь</p>
           <ul class="footer-social-list">
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
