--- a/portfolio.html
+++ b/portfolio.html
@@ -37,18 +37,18 @@
             </li>
           </ul>
         </nav>
-        <ul class="navigation mail-phone-link">
+        <ul class="mail-phone-list">
           <li>
-            <a class="contact-mail" href="mailto:info@devstudio.com">
-              <svg class="envelope-icon">
+            <a class="contact-nav" href="mailto:info@devstudio.com">
+              <svg class="nav-contact-icon" width="16px" height="12px">
                 <use href="./images/icons.svg#icon-envelope "></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contact-phone" href="tel:+380961111111">
-              <svg class="phone-icon">
+            <a class="contact-nav" href="tel:+380961111111">
+              <svg class="nav-contact-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -72,104 +72,122 @@
 
           <ul class="gallery">
             <li class="gallery-card">
-              <img
-                src="./images/portfolio_images/project_1.jpg"
-                width="370"
-                alt="Веб-сайт"
-              />
-              <div class="gallery-card-bottom">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
-              </div>
+              <a class="gallery-card-link" href="">
+                <img
+                  src="./images/portfolio_images/project_1.jpg"
+                  width="370"
+                  alt="Веб-сайт"
+                />
+                <div class="gallery-card-bottom">
+                  <h2>Технокряк</h2>
+                  <p>Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="gallery-card">
-              <img
-                src="./images/portfolio_images/project_2.jpg"
-                width="370"
-                alt="Дизайн"
-              />
-              <div class="gallery-card-bottom">
-                <h2 lang="en">Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
-              </div>
+              <a href="" class="gallery-card-link"
+                ><img
+                  src="./images/portfolio_images/project_2.jpg"
+                  width="370"
+                  alt="Дизайн"
+                />
+                <div class="gallery-card-bottom">
+                  <h2 lang="en">Постер New Orlean vs Golden Star</h2>
+                  <p>Дизайн</p>
+                </div></a
+              >
             </li>
             <li class="gallery-card">
-              <img
-                src="./images/portfolio_images/project_3.jpg"
-                width="370"
-                alt="Додаток"
-              />
-              <div class="gallery-card-bottom">
-                <h2 lang="en">Ресторан Seafood</h2>
-                <p>Додаток</p>
-              </div>
+              <a href="" class="gallery-card-link">
+                <img
+                  src="./images/portfolio_images/project_3.jpg"
+                  width="370"
+                  alt="Додаток"
+                />
+                <div class="gallery-card-bottom">
+                  <h2 lang="en">Ресторан Seafood</h2>
+                  <p>Додаток</p>
+                </div></a
+              >
             </li>
 
             <li class="gallery-card">
-              <img
-                src="./images/portfolio_images/project_4.jpg"
-                width="370"
-                alt="Маркетинг"
-              />
-              <div class="gallery-card-bottom">
-                <h2 lang="en">Проєкт Prime</h2>
-                <p>Маркетинг</p>
-              </div>
+              <a href="" class="gallery-card-link">
+                <img
+                  src="./images/portfolio_images/project_4.jpg"
+                  width="370"
+                  alt="Маркетинг"
+                />
+                <div class="gallery-card-bottom">
+                  <h2 lang="en">Проєкт Prime</h2>
+                  <p>Маркетинг</p>
+                </div></a
+              >
             </li>
             <li class="gallery-card">
-              <img
-                src="./images/portfolio_images/project_5.jpg"
-                width="370"
-                alt="Додаток"
-              />
-              <div class="gallery-card-bottom">
-                <h2 lang="en">Проєкт Boxes</h2>
-                <p>Додаток</p>
-              </div>
+              <a href="" class="gallery-card-link">
+                <img
+                  src="./images/portfolio_images/project_5.jpg"
+                  width="370"
+                  alt="Додаток"
+                />
+                <div class="gallery-card-bottom">
+                  <h2 lang="en">Проєкт Boxes</h2>
+                  <p>Додаток</p>
+                </div></a
+              >
             </li>
             <li class="gallery-card">
-              <img
-                src="./images/portfolio_images/project_6.jpg"
-                width="370"
-                alt="Веб-сайт"
-              />
-              <div class="gallery-card-bottom">
-                <h2 lang="en">Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
-              </div>
+              <a href="" class="gallery-card-link">
+                <img
+                  src="./images/portfolio_images/project_6.jpg"
+                  width="370"
+                  alt="Веб-сайт"
+                />
+                <div class="gallery-card-bottom">
+                  <h2 lang="en">Inspiration has no Borders</h2>
+                  <p>Веб-сайт</p>
+                </div></a
+              >
             </li>
             <li class="gallery-card">
-              <img
-                src="./images/portfolio_images/project_7.jpg"
-                width="370"
-                alt="Дизайн"
-              />
-              <div class="gallery-card-bottom">
-                <h2 lang="en">Видання Limited Edition</h2>
-                <p>Дизайн</p>
-              </div>
+              <a href="" class="gallery-card-link">
+                <img
+                  src="./images/portfolio_images/project_7.jpg"
+                  width="370"
+                  alt="Дизайн"
+                />
+                <div class="gallery-card-bottom">
+                  <h2 lang="en">Видання Limited Edition</h2>
+                  <p>Дизайн</p>
+                </div></a
+              >
             </li>
             <li class="gallery-card">
-              <img
-                src="./images/portfolio_images/project_8.jpg"
-                width="370"
-                alt="Маркетинг"
-              />
-              <div class="gallery-card-bottom">
-                <h2 lang="en">Проєкт LAB</h2>
-                <p>Маркетинг</p>
-              </div>
+              <a href="" class="gallery-card-link">
+                <img
+                  src="./images/portfolio_images/project_8.jpg"
+                  width="370"
+                  alt="Маркетинг"
+                />
+                <div class="gallery-card-bottom">
+                  <h2 lang="en">Проєкт LAB</h2>
+                  <p>Маркетинг</p>
+                </div></a
+              >
             </li>
             <li class="gallery-card">
-              <img
-                src="./images/portfolio_images/project_9.jpg"
-                width="370"
-                alt="Додаток"
-              />
-              <div class="gallery-card-bottom">
-                <h2 lang="en">Growing Business</h2>
-                <p>Додаток</p>
-              </div>
+              <a href="" class="gallery-card-link">
+                <img
+                  src="./images/portfolio_images/project_9.jpg"
+                  width="370"
+                  alt="Додаток"
+                />
+                <div class="gallery-card-bottom">
+                  <h2 lang="en">Growing Business</h2>
+                  <p>Додаток</p>
+                </div></a
+              >
             </li>
           </ul>
         </div>
